# transaction-service/src/main/java/com/service/transaction_service/util/GlobalExceptionHandler.java
@@ -1,53 +1,52 @@
 package com.service.transaction_service.util;
-import com.service.transaction_service.model.ErrorResponse;
+import com.example.demo.model.ErrorResponse;
+import com.example.demo.model.NotFoundErrorResponse;
+import com.example.demo.model.BadRequestErrorResponse;
 import org.apache.kafka.common.errors.ResourceNotFoundException;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
-import org.springframework.http.ProblemDetail;
 import org.springframework.http.ResponseEntity;
-import org.springframework.messaging.handler.annotation.support.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ResponseStatus;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 
 @ControllerAdvice
 public class GlobalExceptionHandler {
 
-    // Obsługa błędu 400 - Bad Request
     @ExceptionHandler(IllegalArgumentException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ResponseEntity<ErrorResponse> handleBadRequest(IllegalArgumentException ex) {
-        ErrorResponse errorResponse = new ErrorResponse(
+    public ResponseEntity<BadRequestErrorResponse> handleBadRequest(IllegalArgumentException ex) {
+        BadRequestErrorResponse errorResponse = new BadRequestErrorResponse(
                 HttpStatus.BAD_REQUEST.value(),
                 ex.getMessage(),
-                "Bad Request"
+                "Bad Request",
+                LocalDateTime.now().atOffset(ZoneOffset.UTC)
         );
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(errorResponse);
     }
 
-    // Obsługa błędu 404 - Not Found
     @ExceptionHandler(ResourceNotFoundException.class)
     @ResponseStatus(HttpStatus.NOT_FOUND)
-    public ResponseEntity<ErrorResponse> handleNotFound(ResourceNotFoundException ex) {
-        ErrorResponse errorResponse = new ErrorResponse(
+    public ResponseEntity<NotFoundErrorResponse> handleNotFound(ResourceNotFoundException ex) {
+        NotFoundErrorResponse errorResponse = new NotFoundErrorResponse(
                 HttpStatus.NOT_FOUND.value(),
                 ex.getMessage(),
-                "Not Found"
+                "Not Found",
+                LocalDateTime.now().atOffset(ZoneOffset.UTC)
         );
         return ResponseEntity.status(HttpStatus.NOT_FOUND).body(errorResponse);
     }
 
-    // Obsługa błędu 500 - Internal Server Error
     @ExceptionHandler(Exception.class)
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
     public ResponseEntity<ErrorResponse> handleGlobalException(Exception ex) {
         ErrorResponse errorResponse = new ErrorResponse(
                 HttpStatus.INTERNAL_SERVER_ERROR.value(),
                 "Wystąpił nieoczekiwany błąd",
-                "Internal Server Error"
+                "Internal Server Error",
+                LocalDateTime.now().atOffset(ZoneOffset.UTC)
         );
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(errorResponse);
     }
